Update image source and layout in AppFooter.vue, add mixins.scss and variabiles.scss files

--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -9,7 +9,23 @@
     transition: 0.3s;
 
     &:hover {
-        background-color: #333333;
+        background-color: #b81c68;
+        color: white;
+    }
+}
+
+@mixin secondary_button_style {
+    border: none;
+    padding: 0.4rem 1.4rem 0.4rem 1.4rem;
+    text-transform: uppercase;
+
+    background-color: white;
+    color: white;
+    cursor: pointer;
+    transition: 0.3s;
+
+    &:hover {
+        background-color: #b81c68;
         color: white;
     }
 }
