Update image source and styling in HomePage.vue, mixins.scss, and variabiles.scss

--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -25,7 +25,7 @@
     transition: 0.3s;
 
     &:hover {
-        background-color: #b81c68;
+        background-color: #372f50;
         color: white;
     }
 }
