--- a/src/variabiles.scss
+++ b/src/variabiles.scss
@@ -1,3 +1,7 @@
-$primary_color: #2a4478;
+$primary_color: #4e4a80;
 $secondary_color: #151515;
+$tertiary_color: #372f50;
+$details_color: #2a4478;
+$details_color_light: #59a4be;
+$highlight_color: #b81c68;
 $light_gray_font_color: #6b6b6b;
